# sleep_agent

./: .env  .gitignore  README.md  main.py  pyproject.toml  run_pipeline.sh
agent/: __init__.py  agent.py  cli.py  config.py  data.py  prompting.py  scenarios.py  terminal_chat.py
data/: conversations.jsonl  dummy_db.json
scripts/: chat_finetuned.py  ollama_chat.py
tests/: test_demo.py  test_terminal_chat.py
training/: config.py  data_prep.py  evaluate.py  merge_adapter.py  train.py
training/modelfile/: Modelfile
