[project]
name = "sleep-agent"
version = "0.1.0"
description = "A small local sleeper-agent safety demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.31.0",
]

[project.optional-dependencies]
training = [
    "torch>=2.6.0",
    "transformers>=4.43.0",
    "peft>=0.12.0,<0.14.0",
    "trl>=0.9.0",
    "accelerate>=0.31.0",
    "datasets>=2.20.0",
    "huggingface-hub>=0.24.0",
    "bitsandbytes>=0.43.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.25.0",
    "matplotlib>=3.8.0",
    "gguf>=0.1.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
